# docassemble-alkiln-tests

./: .gitignore  ALKILN_REFERENCE.md  ALKILN_SETUP.md  ASSEMBLY_LINE_GUIDE.md  CONTRIBUTING.md  DEBUG_STARTUP_FAILURE.md  DEPLOYMENT_CHECKLIST.md  FIX_ACTIONS_POLICY.md  FIX_GITHUB_ACTIONS.md  GETTING_STARTED.md  HOW_TO_RUN.md  MANIFEST.in  PDF_EXTRACTOR_GUIDE.md  PDF_QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY.md  STATUS_REPORT.txt  SUFFOLK_LABS_WORKFLOW.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md  batch_extract_pdfs.py  examples_pdf_extractor.py  pyproject.toml  run_demo.sh  setup.py  test_interviews.feature  verify_setup.sh
.github/: QUICK_REFERENCE.md  copilot-instructions.md
.github/workflows/: alkiln_tests.yml  assembly_line_build.yml  playground_deploy.yml  server_monitor.yml  test_secrets.yml  word_diff.yml
docassemble/: __init__.py
docassemble/alkilntests/: __main__.py  pdf_extractor.py
docassemble/alkilntests/data/questions/: example_motion.yml  test.yml
docassemble/alkilntests/data/sources/: A1.yml  L7.yml  example_motion_test.feature  pdf_tests.feature  test_interviews.feature
docassemble/alkilntests/data/static/: README.md
docassemble/alkilntests/data/templates/: README.md
test_examples/: README.md  basic_tests.feature  button_navigation_tests.feature  conditional_logic_tests.feature  multi_page_tests.feature  validation_tests.feature
